# Chrysalis

./: .coverage  .coverage.mdz-axo-Laptop.pid330204.XrCLue8x.HNQIp837rWOh  .coverage.mdz-axo-Laptop.pid330928.XtYCsHtx.HNQIp837rWOh  .coverage.mdz-axo-Laptop.pid331774.Xl5hJL7x.HNQIp837rWOh  .coverage.mdz-axo-Laptop.pid332753.XJw40t2x.HNQIp837rWOh  .coverage.mdz-axo-Laptop.pid333363.XaJNUTmx.HNQIp837rWOh  .coverage.mdz-axo-Laptop.pid334515.XKcDccMx.HNQIp837rWOh  .coverage.mdz-axo-Laptop.pid335615.Xza6XIfx  .coveragerc  .cspell.json  .cursorrules  .env.test  .eslintrc.js  .gitignore  .kilocodemodes  .markdown-link-check.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .semgrep.yml  .semgrepignore  .spectral.yaml  AGENT.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CLEANUP_COMPLETE.txt  CLEANUP_SUMMARY.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_2026-01-14.md  CONTRIBUTING.md  CREWAI_EXECUTION_PLAN.md  CREWAI_HANDOFF_COMPLETE.md  CREWAI_MASTER_PLAN.md  CREWAI_QUICK_SUMMARY.md  CREWAI_SETUP_GUIDE.md  CREWAI_VALIDATION_CHECKLIST.md  DEBATE_SYSTEM_OVERVIEW.md  DEBATE_SYSTEM_OVERVIEW_EN.md  (+77 more)
contracts/fair_extension/: Cargo.toml  README.md
contracts/fair_extension/src/: evolution.rs  extension.rs  fairness.rs  lib.rs  runtime.rs  validation.rs
memory_system/: README.md  __init__.py  agent_adapter.py  api_server.py  beads.py  bridge_schema.py  byzantine.py  chrysalis_memory.py  chrysalis_types.py  core.py  crdt_merge.py  embeddings.py  exceptions.py  fusion.py  gossip.py  http_api.py  identity.py  job_scheduler.py  job_store.py  pyproject.toml  requirements.txt  retrieval.py  sanitization.py  stores.py  threshold.py
memory_system/analysis/: __init__.py  external.py  shannon.py
memory_system/cloud/: __init__.py  zep_sync.py
memory_system/converters/: __init__.py  chunk.py  code.py  document.py
memory_system/embedding/: __init__.py  cache.py  service.py  singleton.py
memory_system/fireproof/: __init__.py  async_utils.py  config.py  hooks.py  schemas.py  service.py  sync.py
memory_system/fireproof/tests/: __init__.py  test_fireproof.py
memory_system/graph/: __init__.py  base.py  store.py
memory_system/hooks/: __init__.py  zep.py  zep_client.py
memory_system/mcp/: __init__.py  server.py
memory_system/memory_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memory_system/observability/: __init__.py  metrics.py
memory_system/ports/: __init__.py  agent_memory_port.py  fireproof_memory_adapter.py
memory_system/resilience/: __init__.py  circuit_breaker.py
memory_system/resolvers/: __init__.py  lsp.py
memory_system/rust_core/: Cargo.toml  README.md  build.sh  pyproject.toml
memory_system/rust_core/benches/: crdt_bench.rs
memory_system/rust_core/python/chrysalis_memory/: __init__.py
memory_system/rust_core/src/: crdt.rs  lib.rs  memory.rs  storage.rs
memory_system/rust_core/tests/: test_crdt.py
memory_system/semantic/: __init__.py  decomposer.py  exceptions.py  models.py
memory_system/semantic/strategies/: __init__.py  anthropic_strategy.py  base.py  heuristic_strategy.py  ollama_strategy.py  spacy_strategy.py
memory_system/tests/: __init__.py  conftest.py  test_analysis.py  test_beads.py  test_converters.py  test_fusion.py  test_graph.py  test_security_integration.py  test_semantic.py  test_singleton.py  test_zep_client.py
src/native/ocaml-crdt/: dune-project
src/native/ocaml-crdt/_build/: .db  .digest-db  log
src/native/ocaml-crdt/_build/default/: META.chrysalis_crdt  chrysalis_crdt.dune-package  chrysalis_crdt.install  chrysalis_crdt.opam
src/native/ocaml-crdt/_build/default/.ppx/c4ac38c099e65cfba9f925c923ec6de5/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
src/native/ocaml-crdt/_build/default/lib/: chrysalis_crdt.cma  chrysalis_crdt.cmxa  chrysalis_crdt.cmxs  chrysalis_crdt.ml  chrysalis_crdt__.ml-gen  conflict_resolver.ml  conflict_resolver.mli  crdt.ml  vector_clock.ml
src/native/ocaml-crdt/_build/default/lib/.chrysalis_crdt.objs/: chrysalis_crdt.impl.all-deps  chrysalis_crdt.impl.d  chrysalis_crdt__Conflict_resolver.impl.d  chrysalis_crdt__Conflict_resolver.intf.d  chrysalis_crdt__Crdt.impl.d  chrysalis_crdt__Experience.impl.all-deps  chrysalis_crdt__Experience.impl.d  chrysalis_crdt__Vector_clock.impl.d
src/native/ocaml-crdt/_build/default/lib/.chrysalis_crdt.objs/byte/: chrysalis_crdt.cmi  chrysalis_crdt.cmo  chrysalis_crdt.cmt  chrysalis_crdt__.cmi  chrysalis_crdt__.cmo  chrysalis_crdt__.cmt  (+13 more)
src/native/ocaml-crdt/_build/default/lib/.merlin-conf/: lib-chrysalis_crdt
src/native/ocaml-crdt/lib/: chrysalis_crdt.ml  conflict_resolver.ml  crdt.ml  dune  experience.ml  vector_clock.ml
src/native/rust-crypto/: Cargo.toml
src/native/rust-crypto/src/: lib.rs
src/native/rust-system-agents/: Cargo.toml
src/native/rust-system-agents/benches/: knowledge_graph_bench.rs
src/native/rust-system-agents/src/: agent.rs  canvas_bridge.rs  config.rs  cursor_adapter.rs  error.rs  gateway.rs  knowledge_graph.rs  lib.rs  main.rs  memory_adapter.rs  metrics.rs  models.rs  quality.rs
src/rust/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PHASE_1_KICKOFF.md  PHASE_1_PROGRESS.md  README.md
src/rust/chrysalis-adapters/: Cargo.toml
src/rust/chrysalis-adapters/src/: lib.rs  mcp.rs  messages.rs  registry.rs  traits.rs
src/rust/chrysalis-core/: Cargo.toml
src/rust/chrysalis-core/src/: agent.rs  component_types.rs  components.rs  lib.rs  types.rs  validation.rs
src/rust/chrysalis-core/tests/: validation_tests.rs
src/rust/chrysalis-ffi/: Cargo.toml
src/rust/chrysalis-ffi/src/: core.rs  lib.rs
src/rust/chrysalis-security/: Cargo.toml
src/rust/chrysalis-security/src/: cost_control.rs  crypto.rs  lib.rs  wallet.rs
src/rust/chrysalis-sync/: Cargo.toml
src/rust/chrysalis-sync/src/: crdt.rs  gossip.rs  instance.rs  lib.rs  transport.rs
src/rust/chrysalis-wasm/: Cargo.toml
src/rust/chrysalis-wasm/src/: lib.rs
src/rust/migration-tasks/: component_migration.json  migration_orchestrator.json  protocol_adapter_migration.json
(+4728 files in other folders)
