[package]
name = "chrysalis_contracts"
version = "0.1.0"
edition = "2021"
authors = ["Chrysalis Project"]
license = "MIT"
description = "FAIR extension contract system for Chrysalis - enforcing fairness as a validity condition"
repository = "https://github.com/Chrysalis-Project/Chrysalis"
keywords = ["contracts", "fair", "extensions", "validation"]

[lib]
name = "chrysalis_contracts"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.9", features = ["v4", "serde"] }
semver = { version = "1.0", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }

[dependencies.regex]
version = "1.10"

[dev-dependencies]
proptest = "1.4"
