[package]
name = "chrysalis-crypto"
version = "0.1.0"
edition = "2021"
description = "High-performance cryptographic operations for Chrysalis"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
js-sys = "0.3"
hmac = "0.12"
hkdf = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true