[package]
name = "chrysalis-system-agents"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust implementation of Chrysalis system agents"
authors = ["Chrysalis Project"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full", "sync"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for gateway communication (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.11"

# Metrics
prometheus = "0.13"

# Futures for streaming
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Enable async cursor adapter
async-cursor = []