[package]
name = "chrysalis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core agent types and schemas for Chrysalis"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
